// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`VOICE_CONFIGS > matches snapshots for prompts > challenger 1`] = `
"Voice: Challenger (insight-led, assertive, helpful)

Rules:
- Lead with a strong insight or gap.
- Short proof point.
- One direct question.
- Keep it concise and practical.
- Sign off as "The FreightRoll Team" or simply "FreightRoll".
- NEVER mention "YardFlow" - always use "FreightRoll" as the company name.

Manifest Sequence Template:
- Opener: Specific company reference + quick relevance.
- Proof: Primo-style metrics (short, concrete).
- Ask: Single direct question.
- CTA: Include Calendly link.
- Length: Tight, skimmable, no fluff.
"
`;

exports[`VOICE_CONFIGS > matches snapshots for prompts > freightroll 1`] = `
"Voice: FreightRoll (short, punchy, metrics-first)

Rules:
- Short opener. No fluff.
- Use concrete proof: include at least one hard metric token (examples: "$1M", "4%", "25 facilities").
- Ask exactly one direct question.
- Include Calendly link.
- Sign off as "The FreightRoll Team" or simply "FreightRoll".
- NEVER mention "YardFlow" - always use "FreightRoll".
- Avoid long paragraphs. Avoid emojis.
- Output must be usable for cold outreach.

Manifest Sequence Template:
- Opener: Specific company reference + quick relevance.
- Proof: Primo-style metrics (short, concrete).
- Ask: Single direct question.
- CTA: Include Calendly link.
- Length: Tight, skimmable, no fluff.
"
`;

exports[`VOICE_CONFIGS > matches snapshots for prompts > professional 1`] = `
"Voice: Professional (clear, confident, concise)

Rules:
- Respectful, direct, value-focused.
- One clear call-to-action.
- No buzzwords. No fluff.
- Keep it concise and skimmable.
- Sign off as "The FreightRoll Team" or simply "FreightRoll".
- NEVER mention "YardFlow" - always use "FreightRoll" as the company name.

Manifest Sequence Template:
- Opener: Specific company reference + quick relevance.
- Proof: Primo-style metrics (short, concrete).
- Ask: Single direct question.
- CTA: Include Calendly link.
- Length: Tight, skimmable, no fluff.
"
`;
